Refactor: change /expenses/delete method to GET
